--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <!-- Header Right Buttons Search Cart -->
                             <div class="header__right header__right--style2">
                                 <div class="header__button">
-                                    <a class="btn btn--styleOne it-btn" href="Annual-Report-2020-2021.pdf" download="Annual report">
+                                    <a class="btn btn--styleOne it-btn" href="Annual-Report-2020-2021.pdf" download="AnnualReport">
                                     <span class="btn__text">Report</span>
                                       <i class="fa-solid fa-heart btn__icon"></i>
                                   <span class="it-btn__inner">
