--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                     <div class="col-12">
                         <div class="sponsorsTitle">
                             <span class="sponsorsTitle__line"></span>
-                            <h2 class="sponsorsTitle__heading text-uppercase">“ Become Support Sponsor ”</h2>
+                            <h2 class="sponsorsTitle__heading text-uppercase">“ Become A Sponsor ”</h2>
                             <span class="sponsorsTitle__line"></span>
                         </div>
                     </div>
