--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <!-- Mobile Menu Navbar End -->
         <!-- Header Style One End -->
         <!-- Hero/Welcome Section Start -->
-        <section class="hero hero--style5" data-bg-image="image/paint.jpeg">
+        <section class="hero hero--style5" data-bg-image="image/home20.jpg">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-6 col-lg-8 mb-30">
