--- a/about.html
+++ b/about.html
@@ -265,7 +265,7 @@
             <div class="row">
                 <div class="col-lg-10 mx-auto">
                     <div class="aboutDetails text-center">
-                        <p class="reviewblock__qotes5">Our adult program runs three days a week, where we minister the word of God to the adults. This groups mainly consists of people who don’t go to church on Sundays for various reasons, and our goal is reach them with the gospel and remind them, that they too have a purpose and that they are loved. Our feeding scheme feeds about 300 adults per week.
+                        <p class="reviewblock__qotes5">Our adult program runs three days a week, where we minister the word of God to the adults. The groups mainly consists of people who don’t go to church on Sundays for various reasons, and our goal is reach them with the gospel and remind them, that they too have a purpose and that they are loved. Our feeding scheme feeds about 300 adults per week.
                            We handle individual social cases such as helping those who lost their homes to a fire by connecting them with donors and helping individuals get IDs.
                         </p>
                             <br>
